Avoids jump on clicking Move to in category/folder show page

--- a/public/src/page/community/solutions.scss
+++ b/public/src/page/community/solutions.scss
@@ -495,6 +495,8 @@
     color: #666666;
   }
 
+  margin-bottom: 1px;
+
   &.select2-dropdown-open {
     border-bottom: solid 1px #0080FF;
     border-radius: 3px;
@@ -558,6 +560,8 @@
 
   .visible-to-btn {
 		display: inline-block;
+    position: relative;
+    top: -1px;
 		background-color: white;
 	  border: 1px solid lightgrey;
 	  padding: 4px 4px 6px 10px;
